Fix low contrast links and buttons

--- a/src/components/Buttons.module.scss
+++ b/src/components/Buttons.module.scss
@@ -8,7 +8,7 @@
   max-width: 15rem;
   margin: 1rem auto;
   padding: 0.25rem 1rem 0.25rem 3.75rem;
-  background: $turquoise;
+  background: $turquoise-dark;
   color: $white;
   text-align: left;
   font-family: $sans;
