--- a/src/components/PostGrid.module.scss
+++ b/src/components/PostGrid.module.scss
@@ -34,7 +34,7 @@
     margin: 1rem 0 0.25rem;
 
     a {
-      color: $charcoal;
+      color: $turquoise-dark;
 
       &:hover {
         color: $turquoise;
