--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -1,4 +1,5 @@
 $turquoise: #00a6cc;
+$turquoise-dark: darken($turquoise, 10%);
 $tiffany: #03b5aa;
 $rose: #ea526f;
 $plum: #88498f;
